--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,12 @@ spring.application.name=KrishnaTravels
 
 server.port=${PORT:8080}
 
-spring.datasource.hikari.maximum-pool-size=5
+# HikariCP tweaks for Yugabyte Cloud
+spring.datasource.hikari.maximum-pool-size=3
+spring.datasource.hikari.minimum-idle=1
+spring.datasource.hikari.idle-timeout=30000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.max-lifetime=60000
+
 
 
