--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 # =====================================
 # Yugabyte Cloud - PostgreSQL Settings
 # =====================================
-spring.datasource.url=jdbc:postgresql://ap-south-2.83614c59-4e5b-4bc4-83c1-e8aaa69a5ace.aws.yugabyte.cloud:5433/yugabyte?ssl=true&sslmode=require
-spring.datasource.username=naresh
-spring.datasource.password=Karesh@9848
+
+spring.datasource.url=jdbc:postgresql://dpg-d02lakbuibrs73b0qtmg-a.oregon-postgres.render.com:5432/krishna_nocb
+spring.datasource.username=krishna_nocb_user
+spring.datasource.password=rz7LMy6j9vnl0WUin9nqo1Pkjo3cvyQh
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # =====================================
