--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,10 @@
 # Yugabyte Cloud - PostgreSQL Settings
 # =====================================
 
-spring.datasource.url=jdbc:postgresql://dpg-d02lakbuibrs73b0qtmg-a.oregon-postgres.render.com:5432/krishna_nocb
-spring.datasource.username=krishna_nocb_user
-spring.datasource.password=rz7LMy6j9vnl0WUin9nqo1Pkjo3cvyQh
-spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.url=jdbc:postgresql://pg-22cacffa-nareshpattapu.i.aivencloud.com:23376/defaultdb 
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_Z0Bsi6qDtt1Js1A1raJ
+spring.datasource.driver-class-name=org.postgresql.Driver 
 # =====================================
 # JPA & Hibernate (Recommended)
 # =====================================
