--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@
 # Yugabyte Cloud - PostgreSQL Settings
 # =====================================
 
-spring.datasource.url=jdbc:postgresql://pg-22cacffa-nareshpattapu.i.aivencloud.com:23376/defaultdb 
-spring.datasource.username=avnadmin
-spring.datasource.password=AVNS_Z0Bsi6qDtt1Js1A1raJ
+spring.datasource.url=${DB_URL} 
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver 
+
 # =====================================
 # JPA & Hibernate (Recommended)
 # =====================================
