--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,10 @@
 # =====================================
 # Yugabyte Cloud - PostgreSQL Settings
 # =====================================
-
-spring.datasource.url=jdbc:postgresql://pg-22cacffa-nareshpattapu.i.aivencloud.com:23376/defaultdb
-spring.datasource.username=avnadmin
-spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver 
-
+spring.datasource.url=jdbc:postgresql://ep-divine-brook-a1n5teq3-pooler.ap-southeast-1.aws.neon.tech/krishnDB
+spring.datasource.username=naresh
+spring.datasource.password=npg_BR6OkZ4fHSJF
+spring.datasource.driver-class-name=org.postgresql.Driver
 # =====================================
 # JPA & Hibernate (Recommended)
 # =====================================
